# AI-CHRMS

./: .gitignore  README.md  docker-compose.yml  render.yaml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: admin.py  auth.py  chat.py  collector.py  consent.py  copi.py  datasets.py  ml.py  records.py  router.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  init_db.py  session.py
backend/app/models/: __init__.py  audit.py  consent.py  dataset.py  patient.py  record.py  user.py
backend/app/schemas/: __init__.py  audit.py  base.py  consent.py  dataset.py  patient.py  record.py  user.py
backend/app/services/: admin.py  audit.py  auth.py  chatbot.py  consent.py  dataset.py  ml.py  patient.py  record.py  user.py
backend/workers/: celery_app.py  tasks.py
docs/: API.md
frontend/: Dockerfile  README.md  next.config.mjs  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/components/: home-nav.tsx
frontend/components/auth/: auth-provider.tsx
frontend/components/ui/: badge.tsx  card.tsx  form-field.tsx  record-sections.tsx  sonner.tsx  spinner.tsx  stat-card.tsx
frontend/hooks/: use-form-draft.ts
frontend/lib/: health-form-schema.ts  utils.ts
frontend/lib/api/: admin.ts  auth.ts  chat.ts  client.ts  consent.ts  copi.ts  datasets.ts  index.ts  ml.ts  patients.ts  records.ts  types.ts  users.ts
nginx/: nginx.conf
(+30 files in other folders)
