[project]
name = "health-project-backend"
version = "1.0.0"
description = "Health Data Collection API with FastAPI"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.1",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.0.0",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
]
